Lua API에서 Int128 클래스를 문자열로 형 변환할 수 없던 버그 수정
편의를 위해 문자열을 Int128 클래스로 형 변환하는 to_int128 클래스와 문자열을 인수로 하는 Int128 클래스의 생성자를 추가하였습니다.

--- a/documents/확장/Lua API/Int128.md
+++ b/documents/확장/Lua API/Int128.md
@@ -8,6 +8,7 @@
 |:-:|:-|
 ||값이 0인 128비트 정수를 만듭니다.|
 |number(정수)|값이 인수인 128비트 정수를 만듭니다.|
+|string|값이 인수인 128비트 정수를 만듭니다.|
 |Int128|128비트 정수를 복사합니다.|
 |number(정수): high, number(정수): low|high가 상위 8바이트, low가 하위 8바이트인 128비트 정수를 만듭니다.|
 
@@ -20,6 +21,7 @@
 |Int128.get_low_qword|Int128|number(정수)|128비트 정수의 하위 8바이트를 가져옵니다.|
 |Int128.get_high_qword|Int128|number(정수)|128비트 정수의 상위 8바이트를 가져옵니다.|
 |to_string|Int128|string|128비트 정수를 문자열로 바꿉니다.|
+|to_int128|string|Int128|문자열을 128비트 정수로 바꿉니다.|
 
 ## 연산자
 |이름|항|반환|설명|
